# codemind

./: .codemind.yml.example  .gitignore  LICENSE  README.md  ROADMAP.md  ROADMAP_EVO.md  action.yml  pyproject.toml
.agent/workflows/: use-codemind.md
.cursor/: mcp.json.example
codemind/: __init__.py  history.py
codemind/analysis/: ast_engine.py
codemind/api/: server.py
codemind/ci/: __init__.py  github_action.py
codemind/cli/: __init__.py  config.py  install.py  main.py
codemind/cli/commands/: ci.py  commit.py  config.py  doctor.py  fix.py  gateway.py  history.py  hooks.py  info.py  mcp.py  notify.py  pr.py  rules.py  run.py  template.py
codemind/commit/: __init__.py  generator.py
codemind/git/: __init__.py  context.py  diff.py  utils.py
codemind/iac/: __init__.py  scanner.py
codemind/ide/: __init__.py  detect.py  inject.py
codemind/integration/: notify.py
codemind/interactive/: __init__.py  session.py
codemind/llm/: __init__.py  base.py  factory.py  fixer.py  ollama.py  openai.py
codemind/mcp/: __init__.py  checklist.py  docs.py  guard.py  server.py
codemind/prompt/: __init__.py  builder.py  rules.py
codemind/prompt/templates/: pr.txt  review.txt  vibe.txt
codemind/reports/: __init__.py  formatter.py  sarif.py
codemind/rules/: __init__.py  engine.py  presets.py
codemind/sca/: __init__.py  scanner.py
codemind/secrets/: __init__.py  detector.py
codemind/sharing/: __init__.py  export.py  import_config.py
codemind/skills/: base.py  docs.py  manager.py  security.py  ui.py
codemind/ui/: __init__.py  terminal.py
codemind/validate/: __init__.py  parser.py  rules.py
docs/: CNAME  README.md  _config.yml  documentation.html  index.html
docs/assets/css/: docs.css  style.css
docs/assets/js/: main.js
tests/: conftest.py  test_commit_generator.py  test_config.py  test_git_diff.py  test_git_utils.py  test_history.py  test_ide_detect.py  test_indispensable.py  test_mcp.py  test_parser.py  test_prompt_builder.py  test_prompt_security.py  test_sharing.py  test_validate_rules.py
