[project]
name = "codemind"
version = "1.0.1"
description = "MCP Security & Quality Guardian for AI-powered development"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "CodeMind Contributors" }]
keywords = ["mcp", "security", "ai", "code-review", "guardian", "codemind"]

# Core dependencies - MCP is the main feature!
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mcp>=1.0.0",
]

[project.optional-dependencies]
# Full CLI with IDE automation (requires pyautogui)
cli = [
    "pyautogui>=0.9",
    "pyperclip>=1.8",
]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
]
# Everything included
all = [
    "pyautogui>=0.9",
    "pyperclip>=1.8",
]

[project.scripts]
codemind = "codemind.cli.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["codemind*"]
