[project]
name = "codemind"
version = "2.0.0"
description = "MCP Security Guardian — SAST, Secrets, SCA, IaC scanning for AI-powered development"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.10"
authors = [{ name = "CodeMind Contributors" }]
keywords = [
    "mcp", "security", "ai", "code-review", "guardian", "codemind",
    "sast", "sca", "secrets-detection", "iac-scanning", "sarif",
    "vulnerability-scanner", "owasp", "devsecops", "supply-chain",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Security",
    "Topic :: Software Development :: Quality Assurance",
    "Topic :: Software Development :: Testing",
]

# Core dependencies - MCP is the main feature!
dependencies = [
    "click>=8.0",
    "rich>=13.0",
    "pyyaml>=6.0",
    "httpx>=0.27",
    "mcp>=1.0.0",
    "pyperclip>=1.8",
]

[project.optional-dependencies]
# CLI features (Gateway API)
cli = [
    "uvicorn>=0.23",
    "fastapi>=0.100",
]
# AST-based analysis engine (Phase E1)
analysis = [
    "tree-sitter>=0.21",
]
# Development dependencies
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.21",
]
# Everything included
all = [
    "uvicorn>=0.23",
    "fastapi>=0.100",
    "tree-sitter>=0.21",
]

[project.scripts]
codemind = "codemind.cli.main:cli"

[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["codemind*"]

